# meetup-history

./: LICENSE  README.md
2018-05/: README.md
2018-11/: README.md
2019-10/: README.md
2023-02-23/: 20230221195857-rust_meetup_presentation_newtype_pattern.org  README.md
2023-04/binary-formats/: README.md
2023-04/serverless-functions/: .gitignore  README.md
2023-04/serverless-functions/aws-lambda/: Cargo.toml
2023-04/serverless-functions/aws-lambda/src/: main.rs
2023-04/serverless-functions/cloudflare-worker/: .gitignore  Cargo.toml
2023-04/serverless-functions/cloudflare-worker/src/: lib.rs
2023-04/serverless-functions/fermyon-spin/: Cargo.toml  spin.toml
2023-04/serverless-functions/fermyon-spin/src/: lib.rs
2023-04/serverless-functions/knative-serving/: Cargo.toml  Dockerfile  service.yaml
2023-04/serverless-functions/knative-serving/src/: main.rs
2023-04/serverless-functions/slides/: slides.md
2023-05/: README.md
2023-05/rust-on-riot/: Makefile  README.md  slides.tex
2023-06/: Sagar_Kale_Visitor_Pattern_2023_06_29.pdf.license
2023-11/: README.md
2024-01/: README.md
2024-02/embedded-async/: Makefile  README.md  slides.tex
june-2018/: README.md
march-2020/: README.md
may-2018/: README.md
may-2018/websockets-with-tokyo/: README.md  index.html
may-2018/websockets-with-tokyo/js/: reveal.min.js
october-2019/: README.md
