[package]
name = "knative-serving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.6.17"
serde = "1"
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
reqwest = "0.11.16"